--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -34,5 +34,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
+          git add README_es.md
           git commit -m "Update badges" || echo "No changes to commit"
           git push
